--- a/Cashify/Components/Layout/ModalLayout.razor
+++ b/Cashify/Components/Layout/ModalLayout.razor
@@ -1,5 +1,5 @@
 <div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog @Size" role="document">
+    <div class="modal-dialog modal-@Size" role="document">
         <div class="modal-content px-6 py-4">
             <div class="modal-header">
                 <MudText Typo="Typo.subtitle2" HtmlTag="h2" Class="fw-bold text-dark">@Module</MudText>
