--- a/Cashify/Components/Layout/EmptyLayout.razor
+++ b/Cashify/Components/Layout/EmptyLayout.razor
@@ -1,7 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="main">
-    <MudSnackbarProvider />
-    <MudPopoverProvider />
-    @Body
+<div>
+    <MudThemeProvider Theme="MudTheme" />
+    <MudPopoverProvider/>
+    <MudDialogProvider/>
+    <MudSnackbarProvider/>
+    <div class="main">
+        @Body
+    </div>
 </div>
